@@ -855,8 +855,6 @@ class IMP_Basic_Compose extends IMP_Basic_Base
                 $view->pri_opt = $priority_option;
             }
 
-            $menu_view = $prefs->getValue('menu_view');
-            $show_text = in_array($menu_view, array('both', 'text'));
             $compose_options = array();
 
             if ($registry->hasMethod('contacts/search')) {
@@ -866,7 +864,7 @@ class IMP_Basic_Compose extends IMP_Basic_Base
                         'id' => 'addressbook_popup'
                     )),
                     'img' => Horde::img('addressbook_browse.png'),
-                    'label' => $show_text ? _("Address Book") : ''
+                    'label' => _("Address Book")
                 );
                 $js_vars['ImpCompose.contacts_url'] = strval(IMP_Basic_Contacts::url()->setRaw(true));
             }
@@ -885,7 +883,7 @@ class IMP_Basic_Compose extends IMP_Basic_Base
                 $compose_options[] = array(
                     'url' => $url->link(array('class' => 'widget')),
                     'img' => Horde::img('attachment.png'),
-                    'label' => $show_text ? _("Attachments") : ''
+                    'label' => _("Attachments")
                 );
             }
             $view->compose_options = $compose_options;
