@@ -2,6 +2,7 @@
 v6.1.0-git
 ----------
 
+[jan] Fix empty label for spellcheck button.
 [mms] Convert Data URLs in a reply message into attachments so that compose
       attachment limits can be enforced (Bug #12167).
 [mms] Allow attachments to be dragged/dropped from local filesystem on the
